--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "packageManager": "yarn@4.10.3",
   "type": "module",
   "scripts": {
-    "typecheck": "tsc"
+    "lint": "eslint",
+    "build": "tsc",
+    "start": "tsc && node ./build"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "eslint": "^9.39.1",
-    "typescript": "^5.9.3"
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0"
   },
   "dependencies": {
     "discord.js": "^14.25.1"
