--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/better-sqlite3": "^7.6.13",
+    "@typescript-eslint/parser": "^8.47.0",
     "eslint": "^9.39.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import-x": "^4.16.1",
     "globals": "^16.5.0",
     "jiti": "^2.6.1",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0"
   },
   "dependencies": {
+    "better-sqlite3": "^12.4.6",
     "discord.js": "^14.25.1"
   }
 }
