--- a/src/example.config.json
+++ b/src/example.config.json
@@ -1,4 +1,5 @@
 {
 	"token": "your-token-goes-here",
-	"clientId": "your-client-id-goes-here"
+	"clientId": "your-client-id-goes-here",
+	"assetSrc": "https://static.example.com"
 }
