Improve unknown user handling, add mute duration seconds

--- a/src/example.config.json
+++ b/src/example.config.json
@@ -5,5 +5,6 @@
 	"mutedRoleId": "[your muted roleid]",
 	"roleIdsThatCanMute": [
 		"[some roleid that is allowed to mute]"
-	]
+	],
+	"spankMuteDurationSeconds": 10
 }
